new page for files, commits; configurations, vendors, products, repositories, and datasets; table and charts provider for each page; new components for charts; search with sugestions and multi select;

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2130,6 +2130,18 @@ select {
   height: 600px;
 }
 
+.h-800-px {
+  height: 800px;
+}
+
+.h-830-px {
+  height: 830px;
+}
+
+.h-850-px {
+  height: 850px;
+}
+
 .text-55 {
   font-size: 55rem;
 }
